@@ -2,9 +2,10 @@ What is this?
 ===========
   This project is named "epsonepl".
   It is a printer driver which gives ghostscript the ability
-  to print to Epson EPL-5700L, EPL-5800L, EPL-5900L laser printers.
-  EPL-6100L could work too (maybe with little modifications), but nobody
-  tested it yet (volunteers wanted!).
+  to print to Epson EPL-5700L, EPL-5800L, EPL-5900L and
+  EPL-6100L laser printers. EPL-6100L support is not deeply
+  tested (volunteers wanted!).
+
 
 Requirement
 ===========
@@ -48,19 +49,22 @@ Installation
   apsfilter setup.
 
   Read the "FAQ" file, and also browse the mailing list archive (link at 
-  the bottom of http://sourceforge.net/projects/epsonepl/)  for frequently 
+  the bottom of http://sourceforge.net/projects/epsonepl/) for frequently 
   asked questions that has been asked before.
 
 Usage
 =====
   See ps2epl for selectable options. Change "EPL5700L" to "EPL5800L", 
-  or "EPL5900L" where appropriate.
+  "EPL5900L" or "EPL6100L" where appropriate.
 
   Testing: Print using "./ps2epl myfile.ps" and "cat myfile.epl >/dev/lp0",
-  or in one step: "./ps2epl myfile.ps /dev/lp0"
+  or in one step: "./ps2epl myfile.ps /dev/lp0". If you want to try the
+  flow control option (look at README.FlowControl) the commands
+  should be "./ps2epl myfile.ps" (an empty .epl will be generated and
+  no "cat" is needed)  or "./ps2epl myfile.ps /dev/null" (yes, /dev/null).
   
   Alternatively, if your system is based on foomatic, have a look at the 
-  README.foomatic file and foomatic dir.
+  README.foomatic file and foomatic* dirs.
 
 License
 =======
@@ -98,7 +102,7 @@ Notes
     epsoneplijs.spec
 
 "Makefile.in" has been mildly adapted from ijs-0.34, "ijs_server_epsonepl.c" 
- adapted from "ijs_server_example.c", "ps2epl" adapted from "ps2pdfwr" of 
+adapted from "ijs_server_example.c", "ps2epl" adapted from "ps2pdfwr" of 
 ghostscript.
 
 Developer Notes
