@@ -1109,7 +1109,7 @@ main (int argc, char **argv)
               /*
                  If our estimated free mem is too low, we check the real
                  value and refuse to go ahead if it is really low.
-                  We indefinitely wait for some memory to be freed.
+                 We indefinitely wait for some memory to be freed.
                  So, yes, we can get stuck here for ever; and this is
                  right, because if the printer goes out of paper on
                  a 200 page job, the buffer fills up and we loop
@@ -1129,13 +1129,27 @@ main (int argc, char **argv)
 	      */          
           if ((epl_job_info->connectivity != VIA_STDOUT_PIPE))
             {
+/* This unindented part has only a research purpose */
+/* and will be eliminated soon. */
+/* Ugly coding style and ugly formatting is permitted :-) -- rora */
+static last_free_mem=0;
+static bytes_written=0;
+/*
               while (epl_job_info->estimated_free_mem < FREE_MEM_LOW_LEVEL)
+*/
+do
 	        {
 	          fprintf(stderr, "low free memory 0x%8.8x, going to poll\n",
 	                  epl_job_info->estimated_free_mem);
                   epl_poll(epl_job_info, 2); /* we just need the memory value */
+fprintf(stderr, "ESTDATA: really written=%i, memory diff=%i\n",
+ bytes_written, epl_job_info->estimated_free_mem - last_free_mem);
+last_free_mem=epl_job_info->estimated_free_mem;
+bytes_written=0;
 	        }
+while (epl_job_info->estimated_free_mem < FREE_MEM_LOW_LEVEL);
               epl_job_info->estimated_free_mem -= 3 * stream->count + 64;
+bytes_written+=stream->count;
             }
 #endif
 	  epl_print_stripe(epl_job_info, stream, i_stripe);
